kubernetes/app/back-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: back
  name: back
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.network/kubeapp: "true"
        io.kompose.service: back
    spec:
      containers:
      - image: eliseoeric/quotes-back:1
        name: back
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /app
          name: back-claim0
      restartPolicy: Always
      volumes:
      - name: back-claim0
        persistentVolumeClaim:
          claimName: back-claim0
status: {}
