kubernetes/app/data-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: data
  name: data
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.network/kubeapp: "true"
        io.kompose.service: data
    spec:
      containers:
      - env:
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          value: "yes"
        - name: MYSQL_DATABASE
          value: mydatabase
        - name: MYSQL_PASSWORD
          value: root
        - name: MYSQL_ROOT_PASSWORD
          value: root
        image: eliseoeric/quotes-data:1
        name: data
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/dump.sql
          name: data-claim0
      restartPolicy: Always
      volumes:
      - name: data-claim0
        persistentVolumeClaim:
          claimName: data-claim0
status: {}
