kubernetes/app/kubeapp-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kubeapp
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/kubeapp: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kubeapp: "true"
